--- a/default.css
+++ b/default.css
@@ -1,34 +1,54 @@
 @font-face {
   font-family: 'TT Lakes';
   src: url(fonts/TTLakes-Regular.ttf) format(truetype);
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
   font-family: 'TT Lakes';
   src: url(fonts/TTLakes-DemiBold.ttf) format(truetype);
+  font-weight: normal;
+  font-style: normal;
 }
-.swiper {
-  min-width: 320px;
+.swiper{
+  display: flex;
+  min-width: 100%;
   width: 100px;
   height: 234px;
-  display: flex;
 }
 .swiper-wrapper{
-  display: flex;
+  flex-grow: 1;
+  flex-basis: 50%;
+  width: 100%;
   align-items: center;
 }
 body {
         background-color: #F8F8F8;
-        font-family: 'TT Lakes'
+        font-family: 'TT Lakes','Times New Roman', Times, serif;
         font-size: 16px;
         font-weight: 400;
         color: #7E7E82;
         margin: 0;
         padding: 0;
       }
+     .swiper-wrapper button{
+      border: none;
+      background-color: #F8F8F8;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-family: 'TT Lakes';
+      color: #1B1C21;
+      font-weight: 300;
+      font-size: 16px;
+      height: 24px;
+      width:150px;
+        ;
+      }
 .header {
+  width: 320px;
   height: 80px;
   background-color: #FFFFFF;
-  display: block;
         font-family: 'TT Lakes';
         font-size: 16px;
         font-weight: 400;
@@ -45,7 +65,6 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: ;
       }
       .swiper-pagination{
         width: 204px;
@@ -58,3 +77,43 @@ body {
         width: 100%;
         height: 100%;
       }
+@media (min-width: 768px){
+  .swiper{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  min-width: 100%;
+  width: 600px;
+  height: 300px;
+}
+.swiper-wrapper{
+  width: 100%;
+  display: grid;
+  justify-content: start;
+  gap: 5px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat( auto);
+}
+.swiper-slide{
+  flex: 0 0 200px;
+  width: 224px;
+  height: 72px;
+}
+ .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+      .swiper-pagination{
+        display: none;
+      }
+      .header{
+        background-color: #FFFFFF;
+        width: 768px;
+        height: 56px;
+        text-align: left;
+      }
+      .table-swiper-slide{
+        display: none;
+      }
+    }
