--- a/default.css
+++ b/default.css
@@ -10,110 +10,150 @@
   font-weight: normal;
   font-style: normal;
 }
-.swiper{
+.swiper {
   display: flex;
   min-width: 100%;
   width: 100px;
   height: 234px;
 }
-.swiper-wrapper{
+.swiper-wrapper {
   flex-grow: 1;
   flex-basis: 50%;
   width: 100%;
   align-items: center;
 }
 body {
-        background-color: #F8F8F8;
-        font-family: 'TT Lakes','Times New Roman', Times, serif;
-        font-size: 16px;
-        font-weight: 400;
-        color: #7E7E82;
-        margin: 0;
-        padding: 0;
-      }
-     .swiper-wrapper button{
-      border: none;
-      background-color: #F8F8F8;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-family: 'TT Lakes';
-      color: #1B1C21;
-      font-weight: 300;
-      font-size: 16px;
-      height: 24px;
-      width:150px;
-        ;
-      }
-.header {
-  width: 320px;
-  height: 80px;
-  background-color: #FFFFFF;
-        font-family: 'TT Lakes';
-        font-size: 16px;
-        font-weight: 400;
-        color: #7E7E82;
-      text-align: center;
+  background-color: #f8f8f8;
+  font-family: 'TT Lakes', 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #7e7e82;
+  margin: 0;
+  padding: 0;
 }
-  
-      .swiper-slide {
-        width:240px;
-        height: 72px;
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .swiper-pagination{
-        width: 204px;
-        padding-top: 0;
-        padding-bottom: 50px;
-      }
-
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-@media (min-width: 768px){
-  .swiper{
+.swiper-wrapper button {
+  border: none;
+  background-color: #f8f8f8;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  font-family: 'TT Lakes';
+  color: #1b1c21;
+  font-weight: 300;
+  font-size: 16px;
+  height: 24px;
+  width: 150px;
+}
+.header {
+  display: flex;
   flex-wrap: wrap;
-  min-width: 100%;
-  width: 600px;
-  height: 300px;
+  width: 320px;
+  height: 80px;
+  background-color: #ffffff;
+  font-family: 'TT Lakes';
+  font-size: 16px;
+  font-weight: 400;
+  color: #7e7e82;
+  text-align: center;
 }
-.swiper-wrapper{
-  width: 100%;
-  display: grid;
-  justify-content: start;
-  gap: 5px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat( auto);
-}
-.swiper-slide{
-  flex: 0 0 200px;
-  width: 224px;
+
+.swiper-slide {
+  width: 240px;
   height: 72px;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
- .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-      .swiper-pagination{
-        display: none;
-      }
-      .header{
-        background-color: #FFFFFF;
-        width: 768px;
-        height: 56px;
-        text-align: left;
-      }
-      .table-swiper-slide{
-        display: none;
-      }
-    }
+.swiper-pagination {
+  width: 204px;
+  padding-top: 0;
+  padding-bottom: 50px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.table-swiper-slide {
+  display: none;
+}
+.hidden-button {
+  display: none;
+}
+@media (min-width: 768px) {
+  .swiper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    min-width: 100%;
+    width: 600px;
+    height: 300px;
+  }
+  .swiper-wrapper {
+    width: 100%;
+    display: grid;
+    justify-content: start;
+    gap: 16px 24px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .swiper-slide {
+    flex: 0 0 200px;
+    width: 224px;
+    height: 72px;
+  }
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-pagination {
+    display: none;
+  }
+  .header {
+    background-color: #ffffff;
+    width: 768px;
+    height: 56px;
+    text-align: left;
+  }
+  .table-swiper-slide {
+    visibility: hidden;
+  }
+  .hidden-button {
+    display: block;
+  }
+}
+@media (min-width: 1120px) {
+  .header {
+    background-color: #ffffff;
+    font-family: 'TT Lakes';
+    display: flex;
+    align-items: center;
+    width: 1120px;
+    height: 56px;
+    text-align: left;
+  }
+  .swiper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    min-width: 100%;
+    width: 1120px;
+    height: 288px;
+  }
+  .table-swiper-slide {
+    display: ;
+  }
+  .swiper-wrapper {
+    width: 100%;
+    display: grid;
+    gap: 16px 32px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .swiper-slide__apple {
+    display: none;
+  }
+}
