--- a/default.css
+++ b/default.css
@@ -81,9 +81,9 @@ body {
 .table-swiper-slide {
   display: none;
 }
-.hidden-button {
-  display: none;
-}
+.hidden-button{
+    display: none;
+  }
 @media (min-width: 768px) {
   .swiper {
     display: flex;
@@ -120,9 +120,9 @@ body {
     text-align: left;
   }
   .table-swiper-slide {
-    visibility: hidden;
+    display: none;
   }
-  .hidden-button {
+  .hidden-button{
     display: block;
   }
 }
@@ -145,6 +145,9 @@ body {
     height: 288px;
   }
   .table-swiper-slide {
+    display: contents;
+  }
+   .table-swiper-slide {
     display: ;
   }
   .swiper-wrapper {
