--- a/default.css
+++ b/default.css
@@ -47,7 +47,7 @@ body {
 .header {
   display: flex;
   flex-wrap: wrap;
-  width: 320px;
+  width: 100%;
   height: 80px;
   background-color: #ffffff;
   font-family: 'TT Lakes';
@@ -77,6 +77,11 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+}
+.content{
+display: grid;
+ grid-template-columns: repeat(3, 1fr);
+ gap: 30px;
 }
 .table-swiper-slide {
   display: none;
@@ -115,14 +120,18 @@ body {
   }
   .header {
     background-color: #ffffff;
-    width: 768px;
+    width: 100%;
     height: 56px;
     text-align: left;
+    padding: 16px 32px;
   }
   .table-swiper-slide {
     display: none;
   }
   .hidden-button{
+    display: block;
+  }
+  .button{
     display: block;
   }
 }
@@ -132,7 +141,7 @@ body {
     font-family: 'TT Lakes';
     display: flex;
     align-items: center;
-    width: 1120px;
+    width: 100%;
     height: 56px;
     text-align: left;
   }
@@ -144,19 +153,28 @@ body {
     width: 1120px;
     height: 288px;
   }
-  .table-swiper-slide {
-    display: contents;
-  }
    .table-swiper-slide {
-    display: ;
+    display: block ;
+    display: grid;
+    justify-content: space-between;
+    gap: 22px;
+    grid-template-columns: repeat(1, 2fr);
+    width:fit-content
   }
   .swiper-wrapper {
     width: 100%;
     display: grid;
-    gap: 16px 32px;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 12px 5px;
+    grid-template-columns: repeat(4, 2fr);
   }
-  .swiper-slide__apple {
-    display: none;
+.hidden-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 6px;
+    
+  }
+  .content{
+    column-gap: 10px;
   }
 }
