--- a/default.css
+++ b/default.css
@@ -1,94 +1,73 @@
 @font-face {
-  font-family: 'TT Lakes';
-  src: url(fonts/TTLakes-Regular.ttf) format(truetype);
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'TT Lakes';
-  src: url(fonts/TTLakes-DemiBold.ttf) format(truetype);
-  font-weight: normal;
-  font-style: normal;
-}
-.swiper {
-  display: flex;
-  min-width: 100%;
-  width: 100px;
-  height: 234px;
-}
-.swiper-wrapper {
-  flex-grow: 1;
-  flex-basis: 50%;
+   font-family: 'TT Lakes';
+   src: url(fonts/TTLakes-Regular.ttf) format(truetype);
+ }
+ @font-face {
+   font-family: 'TT Lakes';
+   src: url(fonts/TTLakes-DemiBold.ttf) format(truetype);
+ }
+ .swiper {
+  min-width: 320px;
+   width: 100vw;
+   height: 234px;
+   display: flex;
+ }
+ .swiper-wrapper{
+   display: flex;
+   align-items: center;
+ }
+ body {
+         background-color: #F8F8F8;
+         font-family: 'TT Lakes'
+         font-size: 16px;
+         font-weight: 400;
+         color: #7E7E82;
+         margin: 0;
+         padding: 0;
+       }
+ .header {
   width: 100%;
-  align-items: center;
-}
-body {
-  background-color: #f8f8f8;
-  font-family: 'TT Lakes', 'Times New Roman', Times, serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: #7e7e82;
-  margin: 0;
-  padding: 0;
-}
-.swiper-wrapper button {
-  border: none;
-  background-color: #f8f8f8;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: 'TT Lakes';
-  color: #1b1c21;
-  font-weight: 300;
-  font-size: 16px;
-  height: 24px;
-  width: 150px;
-}
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 80px;
-  background-color: #ffffff;
-  font-family: 'TT Lakes';
-  font-size: 16px;
-  font-weight: 400;
-  color: #7e7e82;
-  text-align: center;
-}
+   height: 80px;
+   background-color: #FFFFFF;
+   display: block;
+         font-family: 'TT Lakes';
+         font-size: 16px;
+         font-weight: 400;
+         color: #7E7E82;
+       text-align: center;
+ }
+   
+       .swiper-slide {
+         width:240px;
+         height: 72px;
+         border: 1px solid #EAEAEA;
+         text-align: center;
+         font-size: 18px;
+         background: #fff;
+         display: flex;
+         justify-content: space-around;
+         align-items: center;
+         padding-left: 16px;
+         padding-top: 5px;
+         margin: 0;
+       }
+       .swiper-pagination{
+         width: 100%;
+         padding-top: 0;
+         padding-bottom: 50px;
+       }
+ 
+       .swiper-slide img {
+         display: block;
+         height: 40px;
+       }
 
-.swiper-slide {
-  width: 240px;
-  height: 72px;
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.swiper-pagination {
-  width: 204px;
-  padding-top: 0;
-  padding-bottom: 50px;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.content{
-display: grid;
- grid-template-columns: repeat(3, 1fr);
- gap: 30px;
-}
 .table-swiper-slide {
   display: none;
 }
-.hidden-button{
-    display: none;
-  }
+.hidden-button {
+  display: none;
+}
 @media (min-width: 768px) {
   .swiper {
     display: flex;
@@ -128,10 +107,10 @@ display: grid;
   .table-swiper-slide {
     display: none;
   }
-  .hidden-button{
+  .hidden-button {
     display: block;
   }
-  .button{
+  .button {
     display: block;
   }
 }
@@ -153,13 +132,13 @@ display: grid;
     width: 1120px;
     height: 288px;
   }
-   .table-swiper-slide {
-    display: block ;
+  .table-swiper-slide {
+    display: block;
     display: grid;
     justify-content: space-between;
     gap: 22px;
     grid-template-columns: repeat(1, 2fr);
-    width:fit-content
+    width: fit-content;
   }
   .swiper-wrapper {
     width: 100%;
@@ -167,14 +146,13 @@ display: grid;
     gap: 12px 5px;
     grid-template-columns: repeat(4, 2fr);
   }
-.hidden-button{
+  .hidden-button {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 6px;
-    
   }
-  .content{
+  .content {
     column-gap: 10px;
   }
 }
