--- a/default.css
+++ b/default.css
@@ -82,7 +82,7 @@ body {
     height: 300px;
   }
   .swiper-wrapper {
-    width: 100%;
+    width: 768px;
     display: grid;
     justify-content: start;
     gap: 16px 24px;
@@ -90,8 +90,8 @@ body {
   }
   .swiper-slide {
     flex: 0 0 200px;
-    width: 224px;
-    height: 72px;
+    width: 100px;
+    height: 40px;
   }
   .swiper-slide img {
     display: block;
@@ -99,6 +99,7 @@ body {
     height: 100%;
   }
   .swiper-pagination {
+    display: none;
     width: 204px;
     height: 12px;
     padding-top: 0;
@@ -106,8 +107,8 @@ body {
   }
   .header {
     background-color: #ffffff;
-    width: 100%;
-    height: 56px;
+    width: 224px;
+    height: 72px;
     text-align: left;
     padding: 16px 32px;
   }
