--- a/default.css
+++ b/default.css
@@ -8,9 +8,10 @@
 }
 .swiper {
   min-width: 320px;
-  width: 100px;
+  width: 100%;
   height: 234px;
   display: flex;
+  margin-left: 16px;
 }
 .swiper-wrapper {
   gap: 16px;
@@ -46,9 +47,8 @@ body {
   font-size: 18px;
   background: #fff;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  gap: 300px;
   padding: 16px 16px 16px;
   margin: 0;
 }
@@ -59,11 +59,14 @@ body {
   padding-bottom: 90px;
   margin-top: 16px;
 }
-
-.swiper-slide img {
+img.logo{
+  width: 108px;
+  height: 32px;
+}
+.swiper-slide img:last-child {
   display: block;
   height: 40px;
-  width: 100px;
+  width: 40px;
 }
 
 .table-swiper-slide {
@@ -77,7 +80,6 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    min-width: 100%;
     width: 600px;
     height: 300px;
   }
@@ -89,15 +91,27 @@ body {
     grid-template-columns: repeat(3, 1fr);
   }
   .swiper-slide {
-    flex: 0 0 200px;
-    width: 100px;
-    height: 40px;
-  }
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
+  width: 240px;
+  height: 72px;
+  border: 1px solid #eaeaea;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 16px 16px;
+  margin: 0;
+}
+  img.logo{
+  width: 108px;
+  height: 32px;
+}
+.swiper-slide img:last-child {
+  display: block;
+  height: 40px;
+  width: 40px;
+}
   .swiper-pagination {
     display: none;
     width: 204px;
@@ -107,7 +121,7 @@ body {
   }
   .header {
     background-color: #ffffff;
-    width: 224px;
+    width: 100%;
     height: 72px;
     text-align: left;
     padding: 16px 32px;
